12-k8s-net/deployment-front-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-ingress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-ingress-app
  template:
    metadata:
      labels:
        app: task-ingress-app
    spec:
      containers:
       - name: frontend
         image: nginx
         ports:
         - containerPort: 80
       - name: multitool
         image: wbitt/network-multitool
         ports:
         - containerPort: 8080
