12-k8s-net/two-cnrs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-apps-deployment
  labels:
    app: my-app-multitool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: two-apps-deployment
  template:
    metadata:
      labels:
        app: two-apps-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
