12-k8s-net/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: task-ingress-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
