12-k8s-net/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: task-ingress-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
