12-k8s-net/two-cnrs-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-cnrs-svc
spec:
  selector:
    app: two-apps-deployment
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: 8080

---
apiVersion: v1
kind: Pod
metadata:
  name: netology-multitool
  labels:
    app.kubernetes.io/name: multitool
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool
    ports:
      - containerPort: 8090
